Ensure text remains visible during webfont load

--- a/web/src/components/author.module.css
+++ b/web/src/components/author.module.css
@@ -20,6 +20,7 @@
 
 .author_paragraph_strong {
     font-family: var(--font-family-highlight);
+    font-display: swap;
     font-size: 2em;
     line-height: 40px;
     font-weight: 700;
