--- a/web/src/components/verticalbar.module.css
+++ b/web/src/components/verticalbar.module.css
@@ -4,6 +4,7 @@
 
 .title {
     font-family: var(--font-family-highlight);
+    font-display: swap;
 }
 
 .verticalbarchart {
